--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     
-    <!-- Service Worker Registration -->
+    <!-- Service Worker Registration 
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
@@ -37,5 +37,6 @@
         })
       }
     </script>
+    -->
   </body>
 </html>
