🔧 Fix: Resolve cache issues and complete 1 João with chapters 4-5
- Fix GitHub Raw cache with timestamp forcing
- Remove Service Worker conflicts in development
- Complete bibleMapping.js with comprehensive debug
- Ensure all Bible versions (ACF/ARA/NVI) load correctly
- Fix 1 João 3-5 reading to display all 5 chapters
- Add robust error handling and cache management

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#10b981" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="365Palavras" />
     <meta name="msapplication-TileColor" content="#10b981" />
@@ -23,7 +23,8 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     
-    <!-- Service Worker Registration 
+    <!-- 🔧 SERVICE WORKER TEMPORARIAMENTE COMENTADO PARA DESENVOLVIMENTO -->
+    <!-- 
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
